--- a/pom.xml
+++ b/pom.xml
@@ -5,42 +5,47 @@
   <version>3.2.3</version>
   <name>VoteRoulette</name>
           <repositories>
-			<repository>
-		    	<id>spigot-repo</id>
-		        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-		    </repository>
+            <repository>
+                <id>spigot-repo</id>
+                <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+            </repository>
+            <repository>
+                <id>bintray-repo</id>
+                <url>https://dl.bintray.com/ichbinjoe/public/</url>
+            </repository>
+            <repository>
+		        <id>jitpack.io</id>
+		        <url>https://jitpack.io</url>
+	        </repository>
         </repositories>
         <!--Spigot-API -->
         <dependencies>
-			 <!--Spigot API-->
-			    <dependency>
-			           <groupId>org.spigotmc</groupId>
-			           <artifactId>spigot-api</artifactId>
-			           <version>1.13.2-R0.1-SNAPSHOT</version>
-			           <scope>provided</scope>
-			    </dependency>
-			    <!--Bukkit API-->
-			    <dependency>
-			            <groupId>org.bukkit</groupId>
-			            <artifactId>bukkit</artifactId>
-			            <version>1.13.2-R0.1-SNAPSHOT</version>
-			            <scope>provided</scope>
-			    </dependency>
-               
-      		    <dependency>
+             <!--Spigot API-->
+                <dependency>
+                       <groupId>org.spigotmc</groupId>
+                       <artifactId>spigot-api</artifactId>
+                       <version>1.15.2-R0.1-SNAPSHOT</version>
+                       <scope>provided</scope>
+                </dependency>
+                <!--Bukkit API-->
+                <dependency>
+                        <groupId>org.bukkit</groupId>
+                        <artifactId>bukkit</artifactId>
+                        <version>1.15.2-R0.1-SNAPSHOT</version>
+                        <scope>provided</scope>
+                </dependency>
+                <dependency>
                        <groupId>com.vexsoftware</groupId>
-                       <artifactId>Votifier</artifactId>
-                       <version>1.9</version>
-                       <scope>system</scope>
-                       <systemPath>${project.basedir}/libs/Votifier.jar</systemPath>
+                       <artifactId>nuvotifier-universal</artifactId>
+                       <version>2.6.0</version>
+                       <scope>provided</scope>
                </dependency>
                <dependency>
-                       <groupId>net.milkbowl</groupId>
-                       <artifactId>Vault</artifactId>
-                       <version>1.5.3</version>
-                       <scope>system</scope>
-                       <systemPath>${project.basedir}/libs/Vault.jar</systemPath>
-              </dependency>            
+                      <groupId>com.github.MilkBowl</groupId>
+                      <artifactId>VaultAPI</artifactId>
+                      <version>1.7</version>
+                      <scope>provided</scope>
+               </dependency>         
         </dependencies>
         <build>
                 <sourceDirectory>src</sourceDirectory>
